Starting to build out the app
-Created logo and added to app
- Built out home page
-Building app page
-Added new font

--- a/code.html
+++ b/code.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="h-100">
   <head>
-    <title>App Name: A Coding Project by Mariama Barry</title>
+    <title>FizzBuzz: A Coding Project by Mariama Barry</title>
     <link rel="icon" type="image/png" href="/img/logo/Favicons/Android.png" >
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -29,7 +29,7 @@
         <nav class="navbar navbar-expand-md navbar-dark fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="/img/logo/Favicons/no-bg/Android-removebg-preview.png" class="d-inline-block" width="40" height="40">
-                APP NAME</a>
+                FizzBuzz</a>
                 <button
                 class="navbar-toggler"
                 type="button"
@@ -65,21 +65,17 @@
         <!-- ===== MAIN SECTION ===== -->
         <main class="flex-shrink-0">
             <div class="container py-5 px-4 mt-5">
-                <h2 class="border-1 border-bottom border-dark">The Code for APP NAME</h2>
+                <h2 class="border-1 border-bottom border-dark">The Code for FizzBuzz</h2>
                 <div class="row row-cols-1 row-cols-lg-2">
                     <div class="col-lg-8">
                         <pre class="line-numbers">
                             <code class="language-javascript">
-                                function HelloWorld(){
-                                    alert("hello world!");
-                                }
+                                <!-- Place code here -->
                             </code>
                         </pre>
                     </div>
                     <div class="col-lg-4">
-                        <p>The code is structed in one functions.</p>
-                        <h5>Hello World</h5>
-                        <p>Hello World is a function that displays an alert with a message.</p>
+                        
                     </div>
                 </div>
             </div>
