--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="h-100">
   <head>
-    <title>App Name: A Coding Project by Mariama Barry</title>
+    <title>FizzBuzz: A Coding Project by Mariama Barry</title>
     <link rel="icon" type="image/png" href="/img/logo/Favicons/Android.png" >
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="/index.html"><img src="/img/logo/Favicons/no-bg/Android-removebg-preview.png" class="d-inline-block" width="40" height="40">
-           APP NAME</a>
+           FizzBuzz</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -64,10 +64,8 @@
       <div class="container col-xxl-8 px-4 py-5">
         <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
           <div class="col order-last order-lg-first">
-              <h1 class="display-5 fw-bold lh-1 mb-3">APP NAME: A Coding Challenge</h1>
-              <h4 class="lead">A coding challenge is a task given to programmers to assess their coding skills and problem-solving abilities. 
-                It typically involves writing code to solve a specific problem or meet certain criteria within a set timeframe. 
-                
+              <h1 class="display-5 fw-bold lh-1 mb-3">FizzBuzz</h1>
+              <h4 class="lead">Where Fizz meets Buzz! 
               </h4>
               <ul class="fa-ul pt-2 checklist">
                 <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
@@ -93,7 +91,7 @@
               </h5>
           </div>
           <div class="col">
-                <img src="" class="img-fluid center-block d-block mx-auto" alt="App Logo" width="700" height="500">
+                <img src="/img/FizzBuzz Logo.png" class="img-fluid center-block d-lg-block mx-auto" alt="App Logo" width="auto" height="auto">
           </div>
         </div>
       </div>
