--- a/code.html
+++ b/code.html
@@ -55,9 +55,9 @@
                     <li class="nav-item">
                     <a class="nav-link" target="_blank" href="#">Git Repo</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                     <a class="nav-link" target="_blank" href="#">About</a>
-                    </li>
+                    </li> -->
                 </ul>
                 </div>
             </div>
